fix: z-index of cards

--- a/blocks/roles/__container/roles__container.css
+++ b/blocks/roles/__container/roles__container.css
@@ -1,4 +1,5 @@
 .roles__container {
   list-style: none;
   display: flex;
+  position: relative;
 }
