--- a/blocks/roles/__item/roles__item.css
+++ b/blocks/roles/__item/roles__item.css
@@ -5,32 +5,36 @@
   border-radius: 30px;
   padding: 56px 84px 85px 67px;
   box-sizing: border-box;
-  z-index: 6;
+
+}
+
+.roles__item:nth-of-type(1) {
+  z-index: 1;
 }
 
 .roles__item:nth-of-type(2) {
   background-color: #E7E7E7;
-  z-index: 5;
+  z-index: -1;
 }
 
 .roles__item:nth-of-type(3) {
   background-color: #B9B7B7;
-  z-index: 4;
+  z-index: -2;
 }
 
 .roles__item:nth-of-type(4) {
   background-color: #DEDBDB;
-  z-index: 3;
+  z-index: -3;
 }
 
 .roles__item:nth-of-type(5) {
   background-color: #BBB9B9;
-  z-index: 2;
+  z-index: -4;
 }
 
 .roles__item:nth-of-type(6) {
   background-color: #D9D9D9;
-  z-index: 1;
+  z-index: -5;
 }
 
 .roles__item:nth-of-type(n) {
